--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -226,10 +226,12 @@ body.heaven
 .sticky
   max-width 800px
   margin-right 15px
+  margin-left -3px
   position fixed
   top 0px
   z-index 10
   border ridge
+  border-width 3px
   border-top-width 0
 
 //logs
