--- a/client/templates/game/game.jade
+++ b/client/templates/game/game.jade
@@ -271,20 +271,20 @@
         p
           input(size="50",name="comment",required)
           label
-            input(type="checkbox",name="multilinecheck")
             small
-              复数行
+              input(type="checkbox",name="multilinecheck")
+              多行
           input(type="submit",value="发言")
           span#gmsayopt
           small
-            字号：
+            字号:
           select(name="size")
             option(value="small") 小字号
             option(value="",selected) 普通
             option(value="big") 大字号
           select(name="mode")
           small
-            按日期：
+            按日期:
           select#chooseviewselect
             option(value="all",selected) 全部
             option(value="today") 今日
