--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -54,7 +54,7 @@ input[type="number"]
 #content
   padding 0
   clear both
-  max-width 800px
+  max-width 90%
   margin-left auto
   margin-right auto
 
@@ -224,7 +224,7 @@ body.heaven
 
 //sticky_form
 .sticky
-  max-width 800px
+  max-width 90%
   margin-right 15px
   margin-left -3px
   position fixed
@@ -237,7 +237,7 @@ body.heaven
 //logs
 #logs
   //display table
-  max-width 800px
+  max-width 90%
   > div
     margin 0
     padding 1px
