--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -54,7 +54,7 @@ input[type="number"]
 #content
   padding 0
   clear both
-  max-width 95%
+  max-width 800px
   margin-left auto
   margin-right auto
 
