--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -261,13 +261,13 @@ body.heaven
     div.comment
       display table-cell
       width 100%
-      /*div
+      div
         //white-space pre-wrap
         white-space -moz-pre-wrap
         white-space -webkit-pre-wrap
         white-space pre-line
         word-wrap break-word
-        max-width 600px*/
+        max-width 600px
     div.comment.big
       font-size larger
       font-weight bold
