--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -261,7 +261,7 @@ body.heaven
     div.comment
       display table-cell
       width 100%
-      div
+      div{
         //white-space pre-wrap
         white-space -moz-pre-wrap
         white-space -webkit-pre-wrap
@@ -269,16 +269,19 @@ body.heaven
         word-wrap break-word
 		word-break break-all
         //max-width 600px
+		}
     div.comment.big
       font-size larger
       font-weight bold
       line-height 1
     div.comment.small
       font-size smaller
-    time.time
+    time.time{
       display table-cell
       white-space nowrap
+	  word-break keep-all
       max-width 22ex
+	  }
   .day
     background-color #f0e68c
     //borderud 1px dashed rgb(255,234,90)
