--- a/client/templates/logs.jade
+++ b/client/templates/logs.jade
@@ -7,16 +7,16 @@ section.lobby
         legend 人数
         p
           input(name="min_number_on",type="checkbox")
-          input(name="min_number",type="number",value="3",disabled)
+          input(name="min_number",type="number",value="3")
           | 人以上
         p
           input(name="max_number_on",type="checkbox")
-          input(name="max_number",type="number",value="17",disabled)
+          input(name="max_number",type="number",value="17")
           | 人以下
       p
         input(name="result_team_on",type="checkbox")
         | 胜利阵营
-        select(name="result_team",disabled)
+        select(name="result_team")
           option(value="Human") 村人
           option(value="Werewolf") 人狼
           option(value="Fox") 妖狐
@@ -30,25 +30,25 @@ section.lobby
         legend 结束前的天数
         p
           input(name="min_day_on",type="checkbox")
-          input(name="min_day",type="number",value="1",disabled)
+          input(name="min_day",type="number",value="1")
           | 天以上
         p
           input(name="max_day_on",type="checkbox")
-          input(name="max_day",type="number",value="10",disabled)
+          input(name="max_day",type="number",value="10")
           | 天以下
       fieldset
         legend 规则
         p
           input(name="rule_on",type="checkbox")
-          select(name="rule",disabled)#rulebox
+          select(name="rule")#rulebox
        
-    p: input(type="submit",value="检索",disabled)
-    p 非常抱歉，历史检索对服务器压力过大，暂时无法使用。
+    p: input(type="submit",value="检索")
+    //p 非常抱歉，历史检索对服务器压力过大，暂时无法使用。
       
   form#pager
     p
-      input(type="button",name="prev",value="上一页",disabled)
-      input(type="button",name="next",value="下一页",disabled)
+      input(type="button",name="prev",value="上一页")
+      input(type="button",name="next",value="下一页")
   table.roomstable
     thead
       tr
