--- a/client/templates/jobs/Dog.jade
+++ b/client/templates/jobs/Dog.jade
@@ -3,7 +3,8 @@ section.jobmanual
   p 「トガの狼」中登场的角色。村人侧。
   h2 特殊能力
   p 第一天夜里选择一名参加者作为自己的饲主。不能将自己选为饲主。
-  p 犬活着的时候，饲主被人狼袭击之后不会死（选择饲主的当天除外），但是犬可以袭击杀死自己的饲主。即使饲主是人外的职业也能杀死。
+  p 选择饲主的次日夜里开始，如果犬活着，饲主被人狼或吸血鬼袭击之后不会死（相当于犬以猎人身份守护了饲主）。
+  p 选择饲主的次日夜里开始，犬可以袭击杀死自己的饲主。即使饲主是人外的职业也能杀死。
   p 占卜师和灵能者都会将犬判断为「人狼」。
   h2 胜利条件
   p 村人阵营的胜利
